--- a/include/CliffordState/CMakeLists.txt
+++ b/include/CliffordState/CMakeLists.txt
@@ -4,5 +4,5 @@ add_library(clifford_state
 	QuantumCHPState.hpp
 	QuantumGraphState.cpp
 )
-target_link_libraries(clifford_state graph samplers quantum_circuit)
-target_include_directories(clifford_state PUBLIC ${CMAKE_SOURCE_DIR}/src ${SAMPLERS_DIR} ${QUANTUMCIRCUIT_DIR} ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(clifford_state PRIVATE graph samplers quantum_state)
+target_include_directories(clifford_state PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR})
