--- a/include/Samplers/CMakeLists.txt
+++ b/include/Samplers/CMakeLists.txt
@@ -1,8 +1,11 @@
 add_library(samplers
-	InterfaceSampler.hpp
+    InterfaceSampler.hpp
+    InterfaceSampler.cpp
 	EntropySampler.hpp
 	QuantumStateSampler.hpp
 )
 
 set_target_properties(samplers PROPERTIES LINKER_LANGUAGE CXX)
-target_include_directories(samplers PRIVATE ${QUANTUMSTATE_DIR})
+target_link_libraries(samplers PRIVATE ${PFFFT_LIB})
+target_include_directories(samplers PRIVATE ${QUANTUMSTATE_DIR} ${PFFFT_DIR})
+
