--- a/include/QuantumState/CMakeLists.txt
+++ b/include/QuantumState/CMakeLists.txt
@@ -10,5 +10,9 @@ add_library(quantum_state
 )
 
 target_link_libraries(quantum_state PRIVATE ${LAPACKBLAS} itensor)
+set_target_properties(quantum_state PROPERTIES 
+    LINKER_LANGUAGE CXX 
+    POSITION_INDEPENDENT_CODE ON
+)
 target_link_directories(quantum_state PUBLIC ${LAPACK_DIR} ${BLAS_DIR})
 target_include_directories(quantum_state PRIVATE ${ITENSOR_DIR} ${SAMPLERS_DIR})
