--- a/include/CliffordState/CMakeLists.txt
+++ b/include/CliffordState/CMakeLists.txt
@@ -5,4 +5,8 @@ add_library(clifford_state
 	QuantumGraphState.cpp
 )
 target_link_libraries(clifford_state PRIVATE graph samplers quantum_state)
+set_target_properties(clifford_state PROPERTIES 
+    LINKER_LANGUAGE CXX 
+    POSITION_INDEPENDENT_CODE ON
+)
 target_include_directories(clifford_state PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR})
