--- a/include/Samplers/CMakeLists.txt
+++ b/include/Samplers/CMakeLists.txt
@@ -5,7 +5,10 @@ add_library(samplers
 	QuantumStateSampler.hpp
 )
 
-set_target_properties(samplers PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(samplers PROPERTIES 
+    LINKER_LANGUAGE CXX
+    POSITION_INDEPENDENT_CODE ON
+)
 target_link_libraries(samplers PRIVATE ${PFFFT_LIB})
 target_include_directories(samplers PRIVATE ${QUANTUMSTATE_DIR} ${PFFFT_DIR})
 
