--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,13 @@ cmake_minimum_required(VERSION 3.27)
 
 project(utils LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
 set(CMAKE_CXX_FLAGS "")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g") 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3")
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 
 # ---------------------------------- #
 # -- Manually installed libraries -- #
@@ -77,11 +79,15 @@ set(CLIFFORD_DIR ${PROJECT_SOURCE_DIR}/src/CliffordState)
 set(QUANTUMSTATE_DIR ${PROJECT_SOURCE_DIR}/src/QuantumState)
 set(SAMPLERS_DIR ${PROJECT_SOURCE_DIR}/src/Samplers)
 set(MONTECARLO_DIR ${PROJECT_SOURCE_DIR}/src/MonteCarlo)
+set(MISC_DIR ${PROJECT_SOURCE_DIR}/src/Misc)
+set(TEST_DIR ${PROJECT_SOURCE_DIR}/src/Tests)
 
 add_subdirectory(${CLIFFORD_DIR})
 add_subdirectory(${SAMPLERS_DIR})
 add_subdirectory(${QUANTUMSTATE_DIR})
 add_subdirectory(${MONTECARLO_DIR})
+add_subdirectory(${MISC_DIR})
+add_subdirectory(${TEST_DIR})
 
 if (BUILDING_PYQTOOLS)
     find_package(Python 3.10 
