--- a/src/Misc/CMakeLists.txt
+++ b/src/Misc/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(misc
+add_library(pyqtools_misc
     BinaryMatrix.hpp
     BinaryPolynomial.hpp
 )
-set_target_properties(misc PROPERTIES 
+set_target_properties(pyqtools_misc PROPERTIES 
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
 )
