--- a/src/QuantumState/CMakeLists.txt
+++ b/src/QuantumState/CMakeLists.txt
@@ -9,10 +9,9 @@ add_library(quantum_state
     MatrixProductState.cpp
 )
 
-target_link_libraries(quantum_state PRIVATE ${LAPACKBLAS} itensor)
+target_link_libraries(quantum_state PRIVATE ${LAPACKBLAS} itensor-g)
 set_target_properties(quantum_state PROPERTIES 
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
 )
-target_link_directories(quantum_state PUBLIC ${LAPACK_DIR} ${BLAS_DIR})
 target_include_directories(quantum_state PRIVATE ${ITENSOR_DIR} ${SAMPLERS_DIR})
