--- a/src/QuantumState/CMakeLists.txt
+++ b/src/QuantumState/CMakeLists.txt
@@ -9,7 +9,7 @@ add_library(quantum_state
     MatrixProductState.cpp
 )
 
-target_link_libraries(quantum_state PRIVATE ${LAPACKBLAS} itensor-g)
+target_link_libraries(quantum_state PRIVATE ${LAPACKBLAS} itensor)
 set_target_properties(quantum_state PROPERTIES 
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
