--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(pyqtools_test
     test.cpp
 )
-target_link_libraries(pyqtools_test PRIVATE samplers quantum_state clifford_state)
+target_link_libraries(pyqtools_test PRIVATE clifford_state)
 set_target_properties(pyqtools_test PROPERTIES 
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
