--- a/src/QuantumState/CMakeLists.txt
+++ b/src/QuantumState/CMakeLists.txt
@@ -14,4 +14,4 @@ set_target_properties(quantum_state PROPERTIES
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
 )
-target_include_directories(quantum_state PRIVATE ${ITENSOR_DIR} ${SAMPLERS_DIR})
+target_include_directories(quantum_state PRIVATE ${ITENSOR_DIR})
