--- a/src/Samplers/CMakeLists.txt
+++ b/src/Samplers/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_library(samplers 
     InterfaceSampler.hpp
     InterfaceSampler.cpp
-	EntropySampler.hpp
-	QuantumStateSampler.hpp
+    EntropySampler.hpp
+    QuantumStateSampler.hpp
+    LinearCodeSampler.hpp
 )
 
 set_target_properties(samplers PROPERTIES 
@@ -10,5 +11,4 @@ set_target_properties(samplers PROPERTIES
     POSITION_INDEPENDENT_CODE ON
 )
 target_link_libraries(samplers PRIVATE ${PFFFT_LIB})
-target_include_directories(samplers PRIVATE ${QUANTUMSTATE_DIR} ${PFFFT_DIR})
-
+target_include_directories(samplers PRIVATE ${PFFFT_DIR})
