--- a/src/QuantumState/CMakeLists.txt
+++ b/src/QuantumState/CMakeLists.txt
@@ -9,9 +9,11 @@ add_library(quantum_state
     MatrixProductState.cpp
 )
 
-target_link_libraries(quantum_state PRIVATE ${LAPACKBLAS} itensor)
 set_target_properties(quantum_state PROPERTIES 
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
 )
-target_include_directories(quantum_state PRIVATE ${ITENSOR_DIR})
+
+target_link_libraries(quantum_state PUBLIC ${LAPACKBLAS} itensor)
+target_include_directories(quantum_state PUBLIC ${ITENSOR_DIR})
+target_link_directories(quantum_state PUBLIC ${ITENSOR_DIR}/lib ${BLAS_DIR} ${LAPACK_DIR})
