Can now serialize Clifford States

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,13 @@ else()
 endif()
 
 FetchContent_Declare(
+  glaze
+  GIT_REPOSITORY https://github.com/stephenberry/glaze.git
+  GIT_TAG d907f9cfb7197a29fa7cbefab310895593f5b105
+)
+list(APPEND EXTERNALS glaze)
+
+FetchContent_Declare(
     eigen
     GIT_REPOSITORY https://gitlab.com/libeigen/eigen
     GIT_TAG master
@@ -66,7 +73,7 @@ include_directories(
     ${dataframe_SOURCE_DIR}/src
     ${eigen_SOURCE_DIR}
     ${PROJECT_SOURCE_DIR}/src
-    src
+    ${glaze_SOURCE_DIR}/include
 )
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
