--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,12 +84,14 @@ set(SAMPLERS_DIR ${PROJECT_SOURCE_DIR}/src/Samplers)
 set(MONTECARLO_DIR ${PROJECT_SOURCE_DIR}/src/MonteCarlo)
 set(MISC_DIR ${PROJECT_SOURCE_DIR}/src/Misc)
 set(TEST_DIR ${PROJECT_SOURCE_DIR}/src/Tests)
+set(DISPLAY_DIR ${PROJECT_SOURCE_DIR}/src/SimulatorDisplay)
 
 add_subdirectory(${QUANTUMSTATE_DIR})
 add_subdirectory(${CLIFFORD_DIR})
 add_subdirectory(${MONTECARLO_DIR})
 add_subdirectory(${MISC_DIR})
 add_subdirectory(${SAMPLERS_DIR})
+add_subdirectory(${DISPLAY_DIR})
 add_subdirectory(${TEST_DIR})
 
 find_package(fmt)
