--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -1,11 +1,13 @@
-add_executable(pyqtools_test
-    test.cpp
-)
+if (DEFINED PYQTOOLS_BUILDING_TEST)
+    add_executable(pyqtools_test
+        test.cpp
+    )
 
-set_target_properties(pyqtools_test PROPERTIES 
-    LINKER_LANGUAGE CXX 
-    POSITION_INDEPENDENT_CODE ON
-)
+    set_target_properties(pyqtools_test PROPERTIES 
+        LINKER_LANGUAGE CXX 
+        POSITION_INDEPENDENT_CODE ON
+    )
 
-target_link_libraries(pyqtools_test PRIVATE quantum_state clifford_state linear_code)
-target_include_directories(pyqtools_test PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR} ${CLIFFORDSTATE_DIR} ${MONTECARLO_DIR} ${MISC_DIR})
+    target_link_libraries(pyqtools_test PRIVATE quantum_state clifford_state linear_code simulator_display)
+    target_include_directories(pyqtools_test PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR} ${CLIFFORDSTATE_DIR} ${MONTECARLO_DIR} ${MISC_DIR} ${GLAD_PATH}/include)
+endif()
