--- a/src/SimulatorDisplay/CMakeLists.txt
+++ b/src/SimulatorDisplay/CMakeLists.txt
@@ -1,20 +1,20 @@
-find_package(glfw3 3.4 REQUIRED)
+find_package(glfw3 3.4)
 
 set(GLAD_PATH $ENV{GLAD_PATH})
 include_directories("${GLAD_PATH}/include")
 
 set(SOURCE_FILES
-    SimulatorDisplay.cpp
-    Shader.cpp
+  SimulatorDisplay.cpp
+  Shader.cpp
 )
 
 # Add either glad.c or glad.cpp to the source files list
 if(EXISTS "${GLAD_PATH}/src/glad.c")
-    list(APPEND SOURCE_FILES "${GLAD_PATH}/src/glad.c")
+  list(APPEND SOURCE_FILES "${GLAD_PATH}/src/glad.c")
 elseif(EXISTS "${GLAD_PATH}/src/glad.cpp")
-    list(APPEND SOURCE_FILES "${GLAD_PATH}/src/glad.cpp")
+  list(APPEND SOURCE_FILES "${GLAD_PATH}/src/glad.cpp")
 else()
-    message(FATAL_ERROR "Neither glad.c nor glad.cpp was found in ${GLAD_PATH}/src")
+  message(FATAL_ERROR "Neither glad.c nor glad.cpp was found in ${GLAD_PATH}/src")
 endif()
 
 add_library(simulator_display ${SOURCE_FILES})
