--- a/src/QuantumState/CMakeLists.txt
+++ b/src/QuantumState/CMakeLists.txt
@@ -14,6 +14,6 @@ set_target_properties(quantum_state PROPERTIES
     POSITION_INDEPENDENT_CODE ON
 )
 
-target_link_libraries(quantum_state PUBLIC ${LAPACKBLAS} itensor)
+target_link_libraries(quantum_state PUBLIC ${LAPACKBLAS} itensor fmt::fmt)
 target_include_directories(quantum_state PUBLIC ${ITENSOR_DIR})
 target_link_directories(quantum_state PUBLIC ${ITENSOR_DIR}/lib ${BLAS_DIR} ${LAPACK_DIR})
