--- a/src/Samplers/CMakeLists.txt
+++ b/src/Samplers/CMakeLists.txt
@@ -10,5 +10,5 @@ set_target_properties(samplers PROPERTIES
     LINKER_LANGUAGE CXX
     POSITION_INDEPENDENT_CODE ON
 )
-target_link_libraries(samplers PRIVATE ${PFFFT_LIB})
-target_include_directories(samplers PRIVATE ${PFFFT_DIR})
+target_link_libraries(samplers PUBLIC ${PFFFT_LIB})
+target_include_directories(samplers PUBLIC ${PFFFT_DIR})
