--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "pyqtools"
+name = "qutils"
 version = "0.0.1"
 description = "Tools for managing my quantum simulations."
 requires-python = ">=3.10"
@@ -21,7 +21,7 @@ build-dir = "build/{wheel_tag}"
 wheel.py-api = "cp312"
 
 [tool.scikit-build.cmake.define]
-BUILDING_PYQTOOLS = "ON"
+BUILDING_PYQUTILS = "ON"
 
 [tool.cibuildwheel]
 build-verbosity = 1
