--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ endif()
 FetchContent_Declare(
   glaze
   GIT_REPOSITORY https://github.com/stephenberry/glaze.git
-  GIT_TAG main
+  GIT_TAG cc4ce0efe5133c23ec55f07d9e753f7dd1abb0b8
 )
 list(APPEND EXTERNALS glaze)
 
