--- a/src/CliffordState/CMakeLists.txt
+++ b/src/CliffordState/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(clifford_state 
     CliffordState.hpp
+    CliffordState.cpp
     QuantumCHPState.hpp
     QuantumGraphState.cpp
     Tableau.hpp
