Stashing MPS changes, added spin glass order sampling to QuantumStateSampler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,19 +20,14 @@ find_library(PFFFT_LIB pffft HINTS ${PFFFT_DIR}/lib)
 add_compile_definitions(PFFFT_ENABLE_DOUBLE FMT_HEADER_ONLY)
 
 find_package(fmt)
-find_package(openblas)
-find_package(lapack)
 
-link_directories("$ENV{ITENSOR_DIR}/lib" $ENV{BLAS_DIR})
+link_directories("$ENV{ITENSOR_DIR}/lib" "/scratch/heinriea/Builds/spack/var/spack/environments/pysims/.spack-env/view/lib")
 include_directories("$ENV{ITENSOR_DIR}")
 
-set(ITENSOR_DEPS lapack openblas itensor)
+set(ITENSOR_DEPS openblas itensor)
 if (gfortran)
     set(ITENSOR_DEPS gfortran $ITENSOR_DEPS)
 endif()
-
-#set(ITENSOR_DIR $ENV{ITENSOR_DIR})
-#set(EXTERNAL_DIRS ${LAPACK_DIR} ${BLAS_DIR} ${ITENSOR_DIR}/lib)
 
 # -------------------------------- #
 # ------ Fetching externals ------ #
@@ -65,7 +60,7 @@ list(APPEND EXTERNALS glaze)
 FetchContent_Declare(
     eigen
     GIT_REPOSITORY https://gitlab.com/libeigen/eigen
-    GIT_TAG master
+    GIT_TAG 3.4 
     GIT_SHALLOW TRUE
     GIT_PROGRESS TRUE
 )
