--- a/src/CliffordState/CMakeLists.txt
+++ b/src/CliffordState/CMakeLists.txt
@@ -10,5 +10,5 @@ set_target_properties(clifford_state PROPERTIES
     LINKER_LANGUAGE CXX 
     POSITION_INDEPENDENT_CODE ON
 )
-target_link_libraries(clifford_state PUBLIC samplers quantum_state)
-target_include_directories(clifford_state PRIVATE ${SAMPLERS_DIR} ${QUANTUMSTATE_DIR})
+target_link_libraries(clifford_state PUBLIC quantum_state)
+target_include_directories(clifford_state PRIVATE ${QUANTUMSTATE_DIR})
