Reconfigured build process

--- a/src/CliffordState/CMakeLists.txt
+++ b/src/CliffordState/CMakeLists.txt
@@ -11,4 +11,4 @@ set_target_properties(clifford_state PROPERTIES
     POSITION_INDEPENDENT_CODE ON
 )
 target_link_libraries(clifford_state PUBLIC quantum_state)
-target_include_directories(clifford_state PRIVATE ${QUANTUMSTATE_DIR})
+#target_include_directories(clifford_state PRIVATE ${QUANTUMSTATE_DIR})
