Can now add weak and forced measurements to QuantumCircuit. Updated state classes appropriately.

--- a/src/QuantumCircuit/CMakeLists.txt
+++ b/src/QuantumCircuit/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(quantum_circuit
     CircuitUtils.cpp
     Instructions.hpp
-    Gates.hpp
+    Instructions.cpp
+    #Gates.hpp
     QuantumCircuit.cpp
+    PauliString.cpp
 )
